# cpp-py-framework

./: LICENSE  README.md  requirements.txt  run-cpp-to-py.py
output/output_package01/: __init__.py  __init__.pyi  _output_package01.cp311-win_amd64.pyd
output/output_package02/: __init__.py  __init__.pyi  _output_package02.cp311-win_amd64.pyd
src/Example01/: CMakeLists.txt  Example01.h
src/Example01/cpp/: Example01.cpp
src/Example02/: Example02.h
src/Example02/cpp/: Example02.cpp
